--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-API_URI = http://localhost:5000/
-API_URI = http://74.63.223.224:5000/
+# API_URI = http://localhost:5000/
+API_URI = http://74.63.223.224:4000/
