--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^35.4.0",
     "@ckeditor/ckeditor5-react": "^5.0.6",
+    "@cyntler/react-doc-viewer": "^1.10.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -16,7 +17,9 @@
     "axios": "^1.2.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "fs": "0.0.1-security",
     "papaparse": "^5.3.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
