--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-# API_URI = http://localhost:5000/
+# REACT_APP_API_KEY = http://localhost:5000/
 
-API_URI = http://69.162.75.30:5000/
+REACT_APP_API_KEY = http://69.162.75.30:5000/
