--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0"
   }
